--- a/be-fintrack-master/src/main/resources/application.properties
+++ b/be-fintrack-master/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 # Port
 server.port=5000
 server.address=0.0.0.0
+
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
