--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -2,7 +2,15 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'spring-backend'
-    metrics_path: '/actuator/prometheus'
+  - job_name: 'prometheus'
     static_configs:
-      - targets: ['backend:5000']
+      - targets: ['localhost:9090']
+
+  - job_name: 'docker'
+    static_configs:
+      - targets: ['host.docker.internal:9323']
+
+  - job_name: 'jenkins'
+    static_configs:
+      - targets: ['host.docker.internal:8080']
+    metrics_path: '/prometheus'
